adding list of classes by teacher
